--- a/index.html
+++ b/index.html
@@ -18,10 +18,26 @@
 
         <!-- Inizio header -->
         <header>
-            <!-- Menù -->
-            <section>
-                <nav>
 
+            <!-- Menù -->
+            <section class="menù">
+                <nav>
+                    <div class="menù-left">
+                        <ul>
+                            <li><a href="#"><img src="img/logo-small.png" alt=""></a></li>
+                            <li><a href="#">Perchè Dropbox?</a></li>
+                            <li><a href="#">Funzioni</a></li>
+                            <li><a href="#">Piani e prezzi</a></li>
+                        </ul>
+                    </div>
+                    <div class="menù-right">
+                        <ul>
+                            <li><a href="#">Supporto</a></li>
+                            <li><a href="#">Contatta l'ufficio vendite</a></li>
+                            <li><a href="#">Accedi</a></li>
+                            <li><a href="#"><span>Inizia</span> </a></li>
+                        </ul>
+                    </div>
                 </nav>
             </section>
             <!-- Fine menù -->
@@ -36,6 +52,7 @@
 
         <!-- Inizio main -->
         <main>
+
             <!-- Piano abbonamento -->
             <section>
 
@@ -54,11 +71,11 @@
             </section>
             <!-- Fine trova un partner -->
 
-            <!-- Dropbox Business -->
+            <!-- Operazioni Dropbox Business -->
             <section>
 
             </section>
-            <!-- Fine Dropbox Business -->
+            <!-- Fine operazioni Dropbox Business -->
 
             <!-- Clienti Dropbox Business -->
             <section>
