--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <!-- Fine Google font -->
+
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- Font awesome -->
+
     <link rel="stylesheet" href="css/style.css">
     <title>Dropbox</title>
 </head>
@@ -35,7 +40,7 @@
                             <li><a href="#">Supporto</a></li>
                             <li><a href="#">Contatta l'ufficio vendite</a></li>
                             <li><a href="#">Accedi</a></li>
-                            <li><a href="#"><span>Inizia</span> </a></li>
+                            <li><a href="#"><span class="button">Inizia</span> </a></li>
                         </ul>
                     </div>
                 </nav>
@@ -43,8 +48,17 @@
             <!-- Fine menù -->
 
             <!-- Banner -->
-            <section>
-                
+            <section class="banner">
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <div class="banner-left">
+                    <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archivazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                    <a href="#"><span class="button-banner">Inizia la tua prova gratuita</span></a>
+                    <p>Annulla in qualsiasi momento</p>
+                    <i class="fas fa-arrow-down fa-2x"></i>
+                </div>
+                <div class="banner-right">
+                    <img src="img/jumbo.png" alt="">
+                </div>
             </section>
             <!-- Fine banner -->
         </header>
