Fine piano abbonamento

--- a/index.html
+++ b/index.html
@@ -68,14 +68,147 @@
         <main>
 
             <!-- Piano abbonamento -->
-            <section>
+            <section class="subscription">
 
+            <!-- Titolo e radio-->
+                <h1>Trova il piano Dropbox Business che fa per te</h1>
+                <form action="" method="GET">
+                    <input type="radio" name="mensile">
+                    <label for="mensile"></label><span>Fatturazione mensile</span>
+                        
+                    <input type="radio" name="annuale">
+                    <label for="annuale"></label><span>Fatturazione annuale</span>
+                </form>
+                <!-- Fine titolo e radio -->
+
+                <!-- Colonne -->
+                <section class="column-container">
+                    <div class="column">
+
+                        <!-- Colonna di sinistra -->
+                        <div class="column column-left">
+                            <p class="singolo"><i class="far fa-user"></i> Singolo</p>
+                            <div class="column-padding">
+                                <h1>Professional</h1>
+                                <h5>19,99 €</h5>
+                                <span class="bold-gray">/mese</span>
+                                <div class="padding-top">
+                                    <ul>
+                                        <li><i class="far fa-user"></i> 1 utente</li>
+                                        <li><i class="far fa-folder"></i> 3 TB di spazio di archivazione sicuro</li>
+                                        <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                                    </ul>
+                                </div> 
+                                <div class="padding-top font-size">
+                                    <a href="#"><span class="button-banner"> Prova gratis per 30 giorni</span></a>
+                                </div>
+                                <div class="padding-top font-size">
+                                    <span class="border-bottom">oppure</span><a href="#">acquista ora</a>
+                                </div>  
+                                <div class="padding-top">
+                                    <h5 class="padding-top">Punti salienti del piano</h5>
+                                </div>
+                                <ul class="column-padding">
+                                    <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert</li>
+                                    <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                    <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                                    <li><i class="fas fa-check"></i> Filigrana documento</li>
+                                    <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- Fine colonna di sinistra -->
+
+                        <!-- Colonna di centro -->
+                        <div class="column column-center">
+                            <p class="team"><i class="far fa-building"></i> Team</p>
+                            <div class="column-padding">
+                                <h1>Standard</h1>
+                                <h5>19,99 €</h5>
+                                <span class="bold-gray">/ Utente / mese, a partire da 3 utenti</span>
+                                <div class="padding-top">
+                                    <ul>
+                                        <li><i class="fas fa-user-plus"></i> 1 utente</li>
+                                        <li><i class="far fa-folder"></i> 3 TB di spazio di archivazione sicuro</li>
+                                        <li><i class="far fa-smile"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                                    </ul>
+                                </div>
+                                <div class="padding-top font-size">
+                                    <a href="#"><span class="button-banner">Prova gratis per 30 giorni</span></a> 
+                                </div>
+                                <div class="padding-top font-size">
+                                    <span class="border-bottom">oppure</span><a href="#">acquista ora</a>
+                                </div>
+                                <div class="padding-top">
+                                    <h5 class="padding-top">Punti salienti del piano</h5>
+                                </div>
+                                <ul class="column-padding">
+                                    <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert</li>
+                                    <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                    <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                                    <li><i class="fas fa-check"></i> Filigrana documento</li>
+                                    <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                    <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- Fine colonna di centro -->
+
+                        <!-- Colonna di destra -->
+                        <div class="column column-right">
+                            <p class="team" ><i class="far fa-building"></i> Team</p>
+                            <div class="column-padding">
+                                <h1>Advanced</h1>
+                                <h5>19,99 €</h5>
+                                <span class="bold-gray">/ Utente / mese, a partire da 3 utenti</span>
+                                <div class="padding-top">
+                                    <ul>
+                                        <li><i class="fas fa-user-plus"></i> 1 utente</li>
+                                        <li><i class="far fa-smile"></i> 3 TB di spazio di archivazione sicuro</li>
+                                        <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                                    </ul>
+                                </div>
+                                <div class="padding-top font-size">
+                                    <a href="#"><span class="button-banner">Prova gratis per 30 giorni</span></a>
+                                </div>
+                                <div class="padding-top font-size">
+                                    <span class="border-bottom">oppure</span><a href="#">acquista ora</a>
+                                </div>
+                                <div class="padding-top">
+                                    <h5 class="padding-top">Punti salienti del piano</h5>
+                                </div>
+                                <ul class="column-padding">
+                                    <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox</li>
+                                    <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                    <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                                    <li><i class="fas fa-check"></i> Filigrana documento</li>
+                                    <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                    <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- Fine colonna di destra -->
+
+                        <!-- Colonna in basso -->
+                        <div class="column column-bottom">
+                            <p class="team"><i class="far fa-building"></i> Team</p>
+                            <div class="bottom-content">
+                                <h1>Enterprise</h1>
+                                <a href="#"><span class="button-ufficio-vendite">Contatta l'ufficio vendite</span></a>
+                                <h5>Contatta l'ufficio vendite per i prezzi</h5>
+                                <p class="font-column-bottom">Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
+                            </div>
+                        </div>
+                        <!-- Fine colonna in basso -->
+                    </div>
+                </section>
+                <!-- Fine colonne -->
             </section>
             <!-- Fine piano abbonamento -->
 
             <!-- Contatta team -->
             <section>
-
+                
             </section>
             <!-- Fine contatta team -->
 
