Fine contatta team

--- a/index.html
+++ b/index.html
@@ -208,7 +208,14 @@
 
             <!-- Contatta team -->
             <section>
-                
+                <div class="contact-team">
+                    <img src="img/partner.png" alt="">
+                    <div class="contact-team-text">
+                        <h1>Entra in contatto con un partner Dropbox</h1>
+                        <p class="font-size">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                        <span class="font-size trova-un-partner">Trova un partner</span>
+                    </div>
+                </div>
             </section>
             <!-- Fine contatta team -->
 
