--- a/index.html
+++ b/index.html
@@ -219,16 +219,48 @@
             </section>
             <!-- Fine contatta team -->
 
-            <!-- Trova un partner -->
-            <section>
-
-            </section>
-            <!-- Fine trova un partner -->
-
             <!-- Operazioni Dropbox Business -->
-            <section>
+            <section class="dropbox-operations-container">
+                <h1>Esegui più operazioni con Dropbox Business</h1>
+                <div>
+                    <div class="operation padding-operation">
+                        <img src="img/business-feature-switching-tools.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="font-size">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <u>Dropbox Paper</u> direttamente da Dropbox</p>
+                    </div>
 
+                    <div class="operation padding-operation">
+                        <img src="img/business-feature-coordinate-it.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="font-size">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
+
+                    <div class="operation">
+                        <img src="img/business-feature-multi-device.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="font-size">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
+
+                    <div class="operation padding-operation">
+                        <img src="img/business-feature-integrations-it.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="font-size">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
+
+                    <div class="operation padding-operations">
+                        <img src="img/business-feature-send-files-it.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="font-size">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
+
+                    <div class="operation">
+                        <img src="img/business-feature-security.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="font-size">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
+                </div>
             </section>
+
             <!-- Fine operazioni Dropbox Business -->
 
             <!-- Clienti Dropbox Business -->
