Sezione Clienti Dropbox Business quasi finita

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <!-- Fine Google font -->
 
-    <!-- Font awesome -->
+    <!-- Cdn font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <!-- Font awesome -->
+    <!-- Fine cdn font awesome -->
 
     <link rel="stylesheet" href="css/style.css">
     <title>Dropbox</title>
@@ -207,7 +207,7 @@
             <!-- Fine piano abbonamento -->
 
             <!-- Contatta team -->
-            <section>
+            <section class="contact-team-container">
                 <div class="contact-team">
                     <img src="img/partner.png" alt="">
                     <div class="contact-team-text">
@@ -220,7 +220,7 @@
             <!-- Fine contatta team -->
 
             <!-- Operazioni Dropbox Business -->
-            <section class="dropbox-operations-container">
+            <section class="dropbox-operations-container clearfix">
                 <h1>Esegui più operazioni con Dropbox Business</h1>
                 <div>
                     <div class="operation padding-operation">
@@ -260,12 +260,70 @@
                     </div>
                 </div>
             </section>
-
             <!-- Fine operazioni Dropbox Business -->
-
+            
             <!-- Clienti Dropbox Business -->
-            <section>
+            <section class="dropbox-customers clearfix">
+                <div class="customers-title">
+                    <h1>Più di 500.000 team <br>utilizzano Dropbox Business</h1>
+                    <p><a href="#">Scopri di pù sui nostri clienti</a></p>
+                </div>
+                <div class="col-customers">
 
+                    <!-- Colonna sinistra -->
+                    <div class="col-customers-left">
+                        <div class="box-img designit">
+                            <img src="img/designit.svg" alt="Designit logo">
+                        </div>
+                        <div class="box-img asu">
+                            <img src="img/arizona_state_university.svg" alt="Arizona State University logo">
+                        </div>
+                        <div class="box-img uf">
+                            <img src="img/university_of_florida.svg" alt="University of Florida logo">
+                        </div>
+                        <div class="box-img topps">
+                            <img src="img/topps.svg" alt="Topps logo">
+                        </div>
+                    </div>
+                    <!-- Fine colonna sinistra -->
+
+                    <!-- Colonna centrale -->
+                    <div class="col-customers-center">
+                        <div class="box-center">
+                            <img src="img/designit.svg" alt="Designit logo">
+                            <div class="border">
+
+                            </div>
+                        </div>
+                            <p>"I membri del nostro team lavorano constantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
+                            <span>Morten Thomsen, Global IT Lead</span>
+                    </div>
+                    <div class="col-customers-right">
+                        <div class="box-img wbr">
+                            <img src="img/world_bicycle_relief.svg" alt="World Bicycle Relief logo">
+                        </div>
+                        <div class="box-img hp">
+                            <img src="img/hearst_corp.svg" alt="Hearst Corporation logo">
+                        </div>
+                        <div class="box-img lp">
+                            <img src="img/lonely_planet.svg" alt="Lonely planet logo">
+                        </div>
+                        <div class="box-img cco">
+                            <img src="img/clear_channel.svg" alt="Clear Channel Outdoor logo">
+                        </div>
+                    </div>
+
+                    <!-- Colonna in basso -->
+                    <div class="col-customers-bottom">
+                        <div>
+                            <h1>Porta Dropbox Business nella tua azienda.</h1>
+                        </div>
+                        <div>
+                            <span>Inizia la tua prova gratuita</span>
+                        </div>
+                    </div>
+                    <!-- Fine colonna in basso -->
+                </div>
             </section>
             <!-- Fine clienti Dropbox Business -->
 
